--- a/analysis/multi_tissue_ldmerge.Rmd
+++ b/analysis/multi_tissue_ldmerge.Rmd
@@ -2,10 +2,342 @@
 title: "Multi-tissue analysis, merging the LD blocks"
 author: "XSun"
 date: "2023-12-03"
-output: workflowr::wflow_html
-editor_options:
-  chunk_output_type: console
+output:
+  workflowr::wflow_html:
+    code_folding: hide
+    toc: true
 ---
+# Overview
+
+## Traits
+
+aFib, IBD, LDL, SBP, SCZ, WBC
+
+## Tissues 
+
+We used the top 5 tissues decided [here](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html).
+
+## Settings
+
+We merged the LD blocks if there are genes expanding the blocks.
+
+## Functions used
+
+```{r }
+suppressMessages(library(ctwas))
+suppressMessages(library(data.table))
+suppressMessages(library(RSQLite))
+suppressMessages(library(DT))
+suppressMessages(library(tools))
+suppressMessages(library(dbplyr))
+
+thin <- 0.1
+
+process_data <- function(weight, outputdir, outname, z_snp, z_gene, display_datatable = TRUE) {
+  # Splitting and constructing weight file paths
+  weight <- unlist(strsplit(weight, split=","))
+  weight <- paste0("/project2/xinhe/shared_data/multigroup_ctwas/weights/predictdb_nolnc/mashr_", weight, "_nolnc.db")
+
+  # Reading cTWAS results
+  ctwas_res <- fread(paste0(outputdir, outname, ".susieIrss.txt"))
+
+  # Initialize gene_info dataframe
+  gene_info <- data.frame(gene=character(), genename=character(), gene_type=character(), weight=character())
+  for (i in seq_along(weight)) {
+    sqlite <- dbDriver("SQLite")
+    db <- dbConnect(sqlite, weight[i])
+    query <- function(...) dbGetQuery(db, ...)
+    gene_info_current <- query("SELECT gene, genename, gene_type FROM extra")
+    dbDisconnect(db)
+
+    gene_info_current$weight <- weight[i]
+    gene_info <- rbind(gene_info, gene_info_current)
+  }
+
+  # Processing gene_info
+  gene_info$weight <- sapply(gene_info$weight, function(x) rev(unlist(strsplit(file_path_sans_ext(x), "/")))[1])
+  gene_info$id <- paste(gene_info$gene, gene_info$weight, sep="|")
+
+  # Adding gene names to cTWAS results
+  ctwas_res$genename[ctwas_res$type != "SNP"] <- gene_info$genename[match(ctwas_res$id[ctwas_res$type != "SNP"], gene_info$id)]
+
+  # Adding z values
+  ctwas_res$z[ctwas_res$type == "SNP"] <- z_snp$z[match(ctwas_res$id[ctwas_res$type == "SNP"], z_snp$id)]
+  ctwas_res$z[ctwas_res$type != "SNP"] <- z_gene$z[match(ctwas_res$id[ctwas_res$type != "SNP"], z_gene$id)]
+
+  # Sorting and displaying datatable if required
+  ctwas_res <- ctwas_res[order(-ctwas_res$susie_pip),]
+  if (display_datatable) {
+    datatable(ctwas_res[ctwas_res$type != "SNP" & ctwas_res$susie_pip > 0.8,])
+  }
+  
+  return(ctwas_res)
+}
+
+process_gene_data <- function(ctwas_res, weight = NULL) {
+  # Aggregate susie_pip
+  df_gene <- aggregate(ctwas_res$susie_pip[ctwas_res$type != "SNP"], 
+                       by = list(ctwas_res$genename[ctwas_res$type != "SNP"]), 
+                       FUN = sum)
+  colnames(df_gene) <- c("genename", "combined_pip")
+
+  # Optional part for dropping duplicated gene names
+  # Uncomment this part if needed
+  # df_gene <- df_gene[!(df_gene$genename %in% names(which(table(ctwas_res$genename) > length(weight)))),]
+
+  # Collect tissue-level results
+  all_tissue_names <- unique(ctwas_res$type[ctwas_res$type != "SNP"])
+
+  df_gene_pips <- matrix(NA, nrow = nrow(df_gene), ncol = length(all_tissue_names))
+  colnames(df_gene_pips) <- all_tissue_names
+
+  ctwas_gene_res <- ctwas_res[ctwas_res$type != "SNP",]
+
+  for (i in 1:nrow(df_gene)) {
+    gene <- df_gene$genename[i]
+    ctwas_gene_res_subset <- ctwas_gene_res[ctwas_gene_res$genename == gene,]
+    df_gene_pips[i, ctwas_gene_res_subset$type] <- ctwas_gene_res_subset$susie_pip
+  }
+
+  df_gene <- cbind(df_gene, df_gene_pips)
+
+  # Sort by combined PIP
+  df_gene <- df_gene[order(-df_gene$combined_pip),]
+  df_gene <- df_gene[, apply(df_gene, 2, function(x) {!all(is.na(x))})]  # Drop genes not imputed in any tissue
+
+  # Determine number of rows to display
+  n_rows <- max(sum(df_gene$combined_pip > 0.8), 20)
+
+  # Select top rows based on the criteria
+  df_to_display <- head(df_gene, n_rows)
+  
+  # Return a datatable
+ # return(DT::datatable(df_to_display,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) ))
+    datatable_display <- DT::datatable(df_to_display, 
+                                     caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;', 
+                                     'Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'), 
+                                     options = list(pageLength = 10))
+  return(df_to_display)
+}
+
+```
+
+# aFib
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/aFib-ebi-a-GCST006414/"
+outname <- "aFib-ebi-a-GCST006414_ctwas"
+gwas_n <- 1030836
+weight <- "Heart_Atrial_Appendage,Esophagus_Muscularis,Brain_Cerebellum,Muscle_Skeletal,Thyroid"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
+                                               outname = outname,
+                                               gwas_n = gwas_n,
+                                               thin = thin)
 
 
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
 
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+```
+
+# IBD
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/IBD-ebi-a-GCST004131/"
+outname <- "IBD-ebi-a-GCST004131_ctwas"
+gwas_n <- 59957
+weight <- "Whole_Blood,Cells_Cultured_fibroblasts,Adipose_Subcutaneous,Colon_Transverse,Esophagus_Mucosa"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir, 
+                                               outname = outname, 
+                                               gwas_n = gwas_n, 
+                                               thin = thin)
+
+
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
+
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+```
+
+# LDL
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/LDL-ukb-d-30780_irnt/"
+outname <- "LDL-ukb-d-30780_irnt_ctwas"
+gwas_n <- 343621
+weight <- "Liver,Lung,Spleen,Colon_Transverse,Skin_Not_Sun_Exposed_Suprapubic"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir,
+                                               outname = outname,
+                                               gwas_n = gwas_n,
+                                               thin = thin)
+
+
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
+
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+
+```
+
+# SBP
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/SBP-ukb-a-360/"
+outname <- "SBP-ukb-a-360_ctwas"
+gwas_n <- 317754
+weight <- "Artery_Tibial,Spleen,Skin_Sun_Exposed_Lower_leg,Adipose_Subcutaneous,Brain_Cortex"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir, 
+                                               outname = outname, 
+                                               gwas_n = gwas_n, 
+                                               thin = thin)
+
+
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
+
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+
+```
+
+# SCZ
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/SCZ-ieu-b-5102/"
+outname <- "SCZ-ieu-b-5102_ctwas"
+gwas_n <- 127906
+weight <- "Adrenal_Gland,Brain_Cerebellar_Hemisphere,Brain_Anterior_cingulate_cortex_BA24,Lung,Heart_Left_Ventricle"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir, 
+                                               outname = outname, 
+                                               gwas_n = gwas_n, 
+                                               thin = thin)
+
+
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
+
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+
+```
+
+# WBC
+
+```{r fig.height=6, fig.width=12,message=FALSE, warning=FALSE}
+outputdir <- "/scratch/midway3/sxt1229/ctwas/3.multi_tissue/results/WBC-ieu-b-30/"
+outname <- "WBC-ieu-b-30_ctwas"
+gwas_n <- 563946
+weight <- "Whole_Blood,Adipose_Subcutaneous,Esophagus_Muscularis,Colon_Transverse,Spleen"
+
+load(paste0(outputdir,outname,"_z_snp.Rd"))
+load(paste0(outputdir,outname,"_z_gene.Rd"))
+
+ctwas_parameters <- ctwas:::ctwas_summarize_parameters(outputdir = outputdir, 
+                                               outname = outname, 
+                                               gwas_n = gwas_n, 
+                                               thin = thin)
+
+
+para <- cbind(ctwas_parameters$group_size,ctwas_parameters$group_prior,ctwas_parameters$group_prior_var,ctwas_parameters$enrichment,ctwas_parameters$group_pve)
+colnames(para) <- c("group_size","group_prior","group_prior_var","enrichment","group_pve")
+
+DT::datatable(para,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Parameters'))
+
+ctwas_parameters$convergence_plot
+
+ctwas_res <- process_data(weight = weight,outputdir = outputdir,outname = outname,z_snp = z_snp,z_gene = z_gene,display_datatable = T)
+
+df_gene <- process_gene_data(ctwas_res = ctwas_res)
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Genes with combined pip > 0.8, 0 means pip=0; NA means no such gene in this tissue'),options = list(pageLength = 10) )
+
+table_show <- ctwas_res[ctwas_res$genename %in% df_gene$genename,]
+table_show <- rbind(table_show,ctwas_res[ctwas_res$type!="SNP" & ctwas_res$susie_pip > 0.8,])
+table_show <- table_show[!duplicated(table_show$id),]
+DT::datatable(table_show,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Detailed table for genes with susiepip > 0.8 & combined pip >0.8'),options = list(pageLength = 5))
+
+
+```
