--- a/analysis/LDL_silver_standard.Rmd
+++ b/analysis/LDL_silver_standard.Rmd
@@ -110,7 +110,9 @@ get_ctwas_file <- function(trait, tissue = NULL, folder_results) {
 
 # Results
 
-## Single eQTL analysis results -- pre-estimate L
+## Fine-mapping results
+
+### Single eQTL analysis results -- pre-estimate L
 
 ```{r warning=F, message=F}
 
@@ -151,7 +153,7 @@ z_gene_single <- z_gene_single %>%
 
 
 
-## Single eQTL analysis results -- L=5
+### Single eQTL analysis results -- L=5
 
 ```{r warning=F, message=F}
 
@@ -191,7 +193,7 @@ z_gene_single_L5 <- z_gene_single_L5 %>%
 
 
 
-## Multi-group analysis results -- same QTL share variance, pre-estimate L
+### Multi-group analysis results -- same QTL share variance, pre-estimate L
 
 ```{r warning=F, message=F}
 
@@ -231,7 +233,7 @@ z_gene_multi <- z_gene_multi %>%
 
 
 
-## Multi-group analysis results -- all group share variance, pre-estimate L
+### Multi-group analysis results -- all group share variance, pre-estimate L
 
 ```{r warning=F, message=F}
 
@@ -274,7 +276,7 @@ z_gene_multi_samevar <- z_gene_multi_samevar %>%
 
 
 
-## Multi-group analysis results -- all group share variance, L = 5
+### Multi-group analysis results -- all group share variance, L = 5
 
 ```{r warning=F, message=F}
 
@@ -314,6 +316,7 @@ z_gene_multi_L5 <- z_gene_multi_L5 %>%
 
 
 
+
 ## Comparing with silver standard genes
 
 We followed the analysis in ctwas paper. The silver standard genes for LDL are: 
@@ -345,7 +348,7 @@ DT::datatable(stats,caption = htmltools::tags$caption( style = 'caption-side: le
 ```
 
 
-## Checking why some silver standard genes are missed -- single eQTL, pre-estimate L
+### Checking why some silver standard genes are missed -- single eQTL, pre-estimate L
 
 ```{r warning=F, message=F, fig.height=20, fig.width=20}
 
@@ -474,7 +477,7 @@ make_locusplot(finemap_res_single,
 
 ```
 
-## Checking why some silver standard genes are missed -- single eQTL, L=5
+### Checking why some silver standard genes are missed -- single eQTL, L=5
 
 ```{r warning=F, message=F, fig.height=20, fig.width=20}
 
@@ -577,7 +580,10 @@ make_locusplot(finemap_res_single_L5,
 
 
 
-## Checking the bystander genes -- single eQTL, L=5
+
+## Comparing with bystander genes
+
+### Checking the bystander genes -- single eQTL, L=5
 
 ```{r warning=F, message=F, fig.height=20, fig.width=20}
 
@@ -613,7 +619,7 @@ make_locusplot(finemap_res_single_L5,
 
 ```
 
-## Checking the bystander genes -- single eQTL, pre-estimate L
+### Checking the bystander genes -- single eQTL, pre-estimate L
 
 ```{r warning=F, message=F, fig.height=20, fig.width=20}
 
